# orcaa-desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: publish-update.ps1  publish-update.sh
src-tauri/: Cargo.toml  tauri.admin.conf.json  tauri.business.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/source-icons/: README.md
src-tauri/src/: lib.rs  main.rs
